Record (#4)
* add field to Book class and fix sql script

* add test app to check hibernate

Co-authored-by: Ihor Zakharko <izakh@softserveinc.com>