@@ -9,7 +9,7 @@
 	<name>booklibrary</name>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>15</java.version>
 		<spring.version>5.2.17.RELEASE</spring.version>
 	</properties>
 
@@ -102,8 +102,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
+					<source>15</source>
+					<target>15</target>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
